# cred-machine-coding-round

./: CMakeLists.txt
src/include/constants/: FlightBooking.hpp
src/include/models/: ClassSeatAvailability.cpp  ClassSeatAvailability.hpp  FlightDetails.cpp  FlightDetails.hpp  SearchResponse.cpp  SearchResponse.hpp  Seat.cpp  Seat.hpp
src/include/services/: FlightBookingManager.hpp  FlightBookingManagerImpl.cpp  FlightBookingManagerImpl.hpp
test/: CMakeLists.txt  test_flight_booking.cpp
